[tool.poetry]
name = "unsplash-python-graphql"
version = "0.1.0"
description = "a wrapper around the unsplash rest api to provide graphql access"
authors = ["kyle roux <kyle@casepeer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
flask-graphql = "^2.0.0"
graphene = "^2.1"
graphql-core = "^2.1"
requests = "^2.21"
bunch = "^1.0"
graphql-server-core = "^1.1"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
ipython = "^7.5"
pytest = "^4.4"
pytest-sugar = "^0.9.2"
pytest-black = "^0.3.5"
pyls-black = "^0.4.4"
pytest-dotenv = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
